# suspendtest

./: .gitignore  AGENTS.md  README.md  TODO.md  config.ini  feature_init_plan.md  mkdocs.yml  noxfile.py  pyproject.toml  r  zlgcan_with_python-can.md
docs/: README.md  architecture.md  cli.md  configuration.md  index.md  quickstart.md  report.md
docs/api/: core.md  index.md
src/: __init__.py
src/cli/: __init__.py  main.py
src/core/: __init__.py  config_service.py  errors.py  interfaces.py  models.py  state_machine.py
src/core/detectors/: __init__.py  adb_detector.py  serial_detector.py
src/core/methods/: __init__.py  can_uds.py
src/core/services/: __init__.py  cycle_runner_service.py  report_service.py  suspend_test_service.py
src/suspendtest/: __init__.py  __main__.py
tests/cli/: test_cli_main.py
tests/core/: test_config_service.py  test_report_service.py  test_suspend_test_service.py
tests/core/methods/: test_can_uds.py
